@@ -1,5 +1,13 @@
 2012-08-30  Iain Buclaw  <ibuclaw@ubuntu.com>
 
+	* d-decls.cc(TypeInfoDeclaration::toSymbol): Mark all typeinfo decls
+	as 'used'.
+	* d-glue.cc(one_elem_array): Remove.
+	(CatExp::toElem): Inline use of one_elem_array, clean-up.
+	* d-objfile.cc(ObjectFile::setupSymbolStorage): Update to better
+	handle use of declarations marked with comdat, extern or static.
+	(ObjectFile::doSimpleFunction): Mark function as 'used'.
+	* dt.cc(dt2node): Clean-up indentation.
 	* Make-lang.in: Fix issue with cross-compiler configuration.
 
 2012-08-29  Iain Buclaw  <ibuclaw@ubuntu.com>
